--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,10 @@ rich
 loguru
 python-dotenv
 sqlalchemy>=2.0,<3.0
-psycopg[binary]>=3.2,<4.0
-dbt-core==1.8.7
-dbt-postgres==1.8.2
-great-expectations==0.18.22
+psycopg2-binary>=3.2,<4.0
+great-expectations>=0.18,<1.0
+dbt-core>=1.8.8,<1.9
+dbt-postgres>=1.8.2,<1.9
 playwright>=1.47,<2.0
 streamlit>=1.38,<2.0
 pytest
