--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,16 +1,19 @@
 name: pipeline
+
 on:
-  schedule:
-    - cron: "*/5 * * * *"
   workflow_dispatch:
+  schedule:
+    - cron: "*/30 * * * *"   # every 30 minutes
+
 jobs:
   run:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
@@ -23,10 +26,34 @@ jobs:
       - name: Install Playwright browsers
         run: python -m playwright install --with-deps
 
-      - name: Run pipeline
+      - name: Parse NEON_DATABASE_URL for dbt env
+        shell: bash
         env:
           DATABASE_URL: ${{ secrets.NEON_DATABASE_URL }}
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        run: |
+          python - <<'PY' | while read line; do echo "$line" >> "$GITHUB_ENV"; done
+import os, re
+url = os.environ["DATABASE_URL"]
+m = re.match(r"^postgresql://([^:]+):([^@]+)@([^/]+)/([^?]+)", url)
+assert m, f"Bad DATABASE_URL: {url}"
+user, pwd, host, db = m.groups()
+print(f"PGHOST={host}")
+print(f"PGUSER={user}")
+print(f"PGPASSWORD={pwd}")
+print(f"PGDATABASE={db}")
+print("PGPORT=5432")
+print(f"DBT_PROFILES_DIR={os.environ.get('GITHUB_WORKSPACE')}/pipeline/transform")
+PY
+
+      - name: Run ingestion
+        env:
+          DATABASE_URL: ${{ secrets.NEON_DATABASE_URL }}
         run: |
           python -m pipeline.ingest.fetch_and_parse
-          # later: dbt run, gx checks, alerts
+
+      - name: Run dbt (debug, run, test)
+        working-directory: pipeline/transform/its_on_sale
+        run: |
+          dbt debug
+          dbt run
+          dbt test
