--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ rich
 loguru
 python-dotenv
 sqlalchemy>=2.0,<3.0
-psycopg2-binary>=2.9,<3.0
+psycopg[binary]>=3.1,<3.3
 great-expectations>=0.18,<1.0
 dbt-core>=1.8.8,<1.9
 dbt-postgres>=1.8.2,<1.9
@@ -18,3 +18,4 @@ ruff
 black
 sqlfluff
 sqlfluff-templater-dbt
+pandas
