--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -65,3 +65,7 @@ jobs:
       - name: Run Great Expectations checks
         run: |
           python -m pipeline.dq.run_dq_checks
+
+      - name: Post price summary
+        run: |
+          python -m pipeline.load.report_summary
