--- a/pipeline/transform/its_on_sale/models/marts/marts.yml
+++ b/pipeline/transform/its_on_sale/models/marts/marts.yml
@@ -18,3 +18,11 @@ models:
         tests:
           - not_null
           - unique
+  - name: price_events
+    columns:
+      - name: product_id
+        tests: [not_null]
+      - name: ts_utc
+        tests: [not_null]
+      - name: event_type
+        tests: [not_null]
