--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -74,3 +74,8 @@ jobs:
         run: |
           python -m pipeline.load.report_summary
 
+      - name: Alert price drops
+        run: |
+          python -m pipeline.load.alert_price_drops
+
+
